--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   <div class="team">
     <div class="team-1">
     <a id="video" name="video"></a>
-    <video width="500" controls><source src="videos/team_1.mp4"></video>
+    <video width="500" controls><source src="videos/Team_1.mp4"></video>
     <h2>Connect, To Connect</h2>
     <h4>"Connect, To Connect" talks about how our current world connects. As Covid-19 rises, face-to-face interactions have
      become harder than before. When our devices are connected to the sockets, our connections start. We connect at different
@@ -51,17 +51,17 @@
     </div>
 
     <div class="team-2">
-    <video width="500" controls><source src="videos/team_2.mp4"></video>
+    <video width="500" controls><source src="videos/Team_2.mp4"></video>
     <h2>This Is Our Video</h2>
     </div>
 
     <div class="team-3">
-    <video width="500" controls><source src="videos/team_3.mp4"></video>
+    <video width="500" controls><source src="videos/Team_3.mp4"></video>
     <h2>Connect & Dance!</h2>
     </div>
 
     <div class="team-4">
-    <video width="500" controls><source src="videos/team_4.mp4"></video>
+    <video width="500" controls><source src="videos/Team_4.mp4"></video>
     <h2>Money</h2>
     </div>
 
